--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Minha Rota</title>
 </head>
+
 <header>
     <img class="logo" src="./assets/logo.svg" alt="minha rota logo">
     <aside>
         <a class="events_button">Eventos</a>
-        <img src="./assets/facebook_logo.svg" alt="facebook logo">
+        <a class=""><img src="./assets/facebook_logo.svg" alt="facebook logo"></a>
     </aside>
 </header>
+
 <body>
+    
     <div class="top">
         <div class="top-text">
             <h1>Sobre Nós</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut
+                condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec
+                felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
         </div>
         <img src="./assets/app_guy.png" alt="">
     </div>
@@ -26,14 +32,17 @@
     <div class="mid">
         <div class="text-section">
             <h1>Lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut condimentum tellus id dignissim elementum. Sed turpis massa.</p>
-        </div> 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut
+                condimentum tellus id dignissim elementum. Sed turpis massa.</p>
+        </div>
     </div>
 
     <div class="bottom">
         <div class="schedule-section">
             <img src="./assets/schedule.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut
+                condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec
+                felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
         </div>
 
         <div class="ticket-section">
@@ -43,8 +52,11 @@
             <h2>Horario: À Divulgar</h2>
         </div>
     </div>
+
 </body>
+
 <footer>
     <p>Copyright © 2020 · Minha Rota · Todos os Direitos Reservados</p>
 </footer>
+
 </html>
