Ajustes CSS, Inserção de conteúdo no site

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <div class="top">
         <div class="top-text">
             <h1>Sobre Nós</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut
-                condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec
-                felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
+            <p>O Minha Rota oferece uma solução simples e rápida para quem precisa de um reforço na
+                sua renda mensal. Tudo isso com uma gestão mais eficiente dos ganhos e da rotina.</p>
         </div>
         <img src="./assets/app_guy.png" alt="">
     </div>
@@ -34,17 +33,22 @@
     <div class="mid">
         <div class="text-section">
             <h1>Lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut
-                condimentum tellus id dignissim elementum. Sed turpis massa.</p>
+            <p> No [NOME DO EVENTO] vamos trazer pessoas que entendem de organização financeira e
+                pessoal para ajudar você a aumentar o seu faturamento sem precisar se matar de tanto
+                dirigir!
+                Participe conosco e veja que é possível sim ter o controle da sua rotina, dos seus gastos e
+                dos seus ganhos no trabalho. Venha assumir o controle da rota para o seu sucesso!</p>
         </div>
     </div>
 
     <div class="bottom">
         <div class="schedule-section">
             <img src="./assets/schedule.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut
-                condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec
-                felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
+            <p>O Minha Rota nasceu com o objetivo de proporcionar soluções eficazes para a gestão da
+                rotina de motoristas que trabalham com o transporte de passageiros através de aplicativos.
+                Buscamos facilitar a vida financeira desses profissionais para que possam atingir seus
+                objetivos, seja conseguir um novo emprego, fazer uma faculdade ou pagar a festa de 15
+                anos da filha.</p>
         </div>
 
         <div class="ticket-section">
