Ajustes CSS e inserção de conteúdo na página

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>O Minha Rota oferece uma solução simples e rápida para quem precisa de um reforço na
                 sua renda mensal. Tudo isso com uma gestão mais eficiente dos ganhos e da rotina.</p>
         </div>
-        <img src="./assets/app_guy.png" alt="">
+        <img src="./assets/app_guy.png" alt="Imagem ">
     </div>
 
     <div class="mid">
@@ -43,7 +43,7 @@
 
     <div class="bottom">
         <div class="schedule-section">
-            <img src="./assets/schedule.svg" alt="">
+            <img src="./assets/schedule.svg" alt="Imagem calendario">
             <p>O Minha Rota nasceu com o objetivo de proporcionar soluções eficazes para a gestão da
                 rotina de motoristas que trabalham com o transporte de passageiros através de aplicativos.
                 Buscamos facilitar a vida financeira desses profissionais para que possam atingir seus
