--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="mid">
         <div class="text-section">
-            <h1>Lorem ipsum</h1>
+            <h1>[NOME DO EVENTO]</h1>
             <p> No [NOME DO EVENTO] vamos trazer pessoas que entendem de organização financeira e
                 pessoal para ajudar você a aumentar o seu faturamento sem precisar se matar de tanto
                 dirigir!
