add: whole body

--- a/index.html
+++ b/index.html
@@ -15,7 +15,34 @@
     </aside>
 </header>
 <body>
+    <div class="top">
+        <div class="top-text">
+            <h1>Sobre Nós</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
+        </div>
+        <img src="./assets/app_guy.png" alt="">
+    </div>
 
+    <div class="mid">
+        <div class="text-section">
+            <h1>Lorem ipsum</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut condimentum tellus id dignissim elementum. Sed turpis massa.</p>
+        </div> 
+    </div>
+
+    <div class="bottom">
+        <div class="schedule-section">
+            <img src="./assets/schedule.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices ligula ut varius auctor. Ut condimentum tellus id dignissim elementum. Sed turpis massa, efficitur ac semper porta, blandit nec felis. Proin laoreet laoreet felis, eu convallis libero pulvinar eget. Nulla pretium eros.</p>
+        </div>
+
+        <div class="ticket-section">
+            <a>Ingressos</a>
+            <h1>Dia 30 de Janeiro</h1>
+            <h2>Local: À Divulgar</h2>
+            <h2>Horario: À Divulgar</h2>
+        </div>
+    </div>
 </body>
 <footer>
     <p>Copyright © 2020 · Minha Rota · Todos os Direitos Reservados</p>
