--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/jpg" href="./assets/favicon.png"/>
+
+    <title>Minha Rota</title>
 </head>
 <header>
     <img class="logo" src="./assets/logo.svg" alt="minha rota logo">
