--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img class="logo" src="./assets/logo.svg" alt="minha rota logo">
     <aside>
         <a class="events_button">Eventos</a>
-        <a class=""><img src="./assets/facebook_logo.svg" alt="facebook logo"></a>
+        <a href="https://www.facebook.com/MinhaRota-109095413978821" target="_blank"><img src="./assets/facebook_logo.svg" alt="facebook logo"></a>
     </aside>
 </header>
 
@@ -32,7 +32,7 @@
 
     <div class="mid">
         <div class="text-section">
-            <h1>[NOME DO EVENTO]</h1>
+            <h1>Lorem ipsum</h1>
             <p> No [NOME DO EVENTO] vamos trazer pessoas que entendem de organização financeira e
                 pessoal para ajudar você a aumentar o seu faturamento sem precisar se matar de tanto
                 dirigir!
