--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <div class="mid">
         <div class="text-section">
-            <h1>Lorem ipsum</h1>
-            <p> No [NOME DO EVENTO] vamos trazer pessoas que entendem de organização financeira e
+            <h1>Planejamento e Gestão para Motoristas</h1>
+            <p> No Planejamento e Gestão para Motoristas vamos trazer pessoas que entendem de organização financeira e
                 pessoal para ajudar você a aumentar o seu faturamento sem precisar se matar de tanto
                 dirigir!
                 Participe conosco e veja que é possível sim ter o controle da sua rotina, dos seus gastos e
