Ajustes CSS e Inserção do Widget da Sympla

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </div>
 
         <div class="ticket-section">
-            <a>Ingressos</a>
+            <a href="https://www.sympla.com.br/planejamento-e-gestao-para-motoristas__773631" target="_blank">Garanta seu Ingresso</a>
+            <!-- <a class="button-small-text" href="https://www.sympla.com.br/planejamento-e-gestao-para-motoristas__773631" target="_blank"> <img src="https://www.sympla.com.br/images/btn-buy-tickets.png"></img> </a> -->
+            <!-- <div id="sympla-widget-773631" height="auto"></div> <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/773631"></script> -->
             <h1>Dia 30 de Janeiro</h1>
             <h2>Local: À Divulgar</h2>
             <h2>Horario: À Divulgar</h2>
