add: sympla widget

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <img class="logo" src="./assets/logo.svg" alt="minha rota logo">
     <aside>
-        <a class="events_button">Eventos</a>
+        <a class="events_button" href="https://www.sympla.com.br/planejamento-e-gestao-para-motoristas__773631" target="_blank">Eventos</a>
         <a href="https://www.facebook.com/MinhaRota-109095413978821" target="_blank"><img src="./assets/facebook_logo.svg" alt="facebook logo"></a>
     </aside>
 </header>
@@ -52,9 +52,8 @@
         </div>
 
         <div class="ticket-section">
-            <a href="https://www.sympla.com.br/planejamento-e-gestao-para-motoristas__773631" target="_blank">Garanta seu Ingresso</a>
-            <!-- <a class="button-small-text" href="https://www.sympla.com.br/planejamento-e-gestao-para-motoristas__773631" target="_blank"> <img src="https://www.sympla.com.br/images/btn-buy-tickets.png"></img> </a> -->
-            <!-- <div id="sympla-widget-773631" height="auto"></div> <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/773631"></script> -->
+            <a class="button-small-text" href="https://www.sympla.com.br/planejamento-e-gestao-para-motoristas__773631" target="_blank"> <img src="https://www.sympla.com.br/images/btn-buy-tickets.png"></img> </a>
+            <div id="sympla-widget-773631" height="auto"></div> <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/773631"></script>
             <h1>Dia 30 de Janeiro</h1>
             <h2>Local: À Divulgar</h2>
             <h2>Horario: À Divulgar</h2>
